--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </tr>
 </table>
 
+<p> No suggestion neede - step 4 also completed 💯 </P>
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
 <script>
