--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </table>
 
 <p> No suggestion neede - step 4 also completed 💯 </P>
+suggestion
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
 <script>
